<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Freeflow Bluetooth</string>
   <string name="serial_console">Nothing received...</string>
   <string name="action_settings">Settings</string>
   <string name="on">Turn On</string>
   <string name="connect">Connect to Python</string>
   <string name="Visible">Make Visible</string>
   <string name="List">List Devices</string>
   <string name="displayData">View database</string>
   <string name="row_weight">Weight</string>

</resources>
