<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:id="@+id/bluetoothSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/onButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="on"
                android:text="@string/on" />

            <Button
                android:id="@+id/makeVisibleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="visible"
                android:text="@string/Visible" />

            <Button
                android:id="@+id/listDevicesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="list"
                android:text="@string/List" />
        </LinearLayout>

        <ListView
            android:id="@+id/pairedDevicesList"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:visibility="visible" >
        </ListView>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
	        <Button
	            android:id="@+id/connectButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="connect"
	            android:text="@string/connect" />
	
	        <Button
	            android:id="@+id/disp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/displayData" />
	        
        </LinearLayout>

        <TextView
            android:id="@+id/serialStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serial_console" />

        <info.canthub.freeflowbluetooth.FreeflowGraph
            android:id="@+id/outputGraph"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

</RelativeLayout>